--- a/app/agencies.html
+++ b/app/agencies.html
@@ -74,7 +74,7 @@
               </div>
               <div class="col-12 col-lg-6 centered column">
                 <h3>What can we do for your business</h3>
-                <a href="#get-in-touch" class="d-inline-block btn btn-orange">Get in touch</a>
+                <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
 
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 col-md-6">
-                <figure><img class="img-fluid" src="images/service/why.jpg" alt=""></figure>
+                <figure><img class="img-fluid" src="images/agencies/google.jpg" alt=""></figure>
               </div>
               <div class="col-12 col-md-6 center-vert">
                 <h3 class="case-title">Why?</h3>
@@ -109,17 +109,17 @@
             <div class="row">
               <div class="col-12 col-md-4">
                 <img src="images/bulb-icon.png" alt="" class="icon">
-                <h3>Pay per click advertising</h3>
+                <h4>Pay per click advertising</h4>
                 <p>Your clients can enjoy the best possible return on their PPC investment with highly targeted campaigns and ongoing support from dedicated account managers.</p>
               </div>
               <div class="col-12 col-md-4">
                 <img src="images/bulb-icon.png" alt="" class="icon">
-                <h3>Search Engine optimisation</h3>
+                <h4>Search Engine optimisation</h4>
                 <p>From one-off campaigns to long term projects, your clients can enjoy better return from organic search with our tried and tested SEO strategies. </p>
               </div>
               <div class="col-12 col-md-4">
                 <img src="images/bulb-icon.png" alt="" class="icon">
-                <h3>Conversion Rate Optimisation</h3>
+                <h4>Conversion Rate Optimisation</h4>
                 <p>Increase your client’s conversion rate with full website audits and techniques aimed at increasing their enquiries from the same level of traffic. </p>
               </div>
             </div>
