--- a/app/case.html
+++ b/app/case.html
@@ -81,7 +81,7 @@
               </div>
               <div class="col-12 col-lg-6 centered column">
                 <h3>What can we do for your business</h3>
-                <a href="/portfolio.html" class="d-inline-block btn btn-orange">Get in touch</a>
+                <a href="#" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
 
@@ -120,16 +120,18 @@
           </div>
         </section>
 
-        <section class="solution">
-          <div class="row no-gutters">
-              <div class="col-12">
-                <figure>
-                  <img class="img-fluid" src="images/case-studies/chart-2-origin-global.jpg" alt="">
-                </figure>
+         <section class="solution testimonial">
+          <div class="container">
+          <div class="row no-gutters justify-content-center">
+              <div class="col-11 col-sm-10 col-md-8">
+                <p>“Ignition have been outstanding. Not only have they delivered fantastic ROI from our Adwords spend, they have recovered us from a complex Google penalty.”</p>
+                <p class="author"><strong>Ben Brocklesby, </strong>Marketing Director, Origin </p>
+              </div>
               </div>
             </div>
           </div>
         </section>
+        <!-- testimonial -->
 
         <section class="solution pt-0 pb-0">
           <div class="container">
@@ -151,16 +153,7 @@
         </section>
 
 
-        <section class="solution testimonial">
-          <div class="row no-gutters justify-content-center">
-              <div class="col-11 col-sm-10 col-md-8">
-                <p>“Ignition have been outstanding. Not only have they delivered fantastic ROI from our Adwords spend, they have recovered us from a complex Google penalty.”</p>
-                <p class="author"><strong>Ben Brocklesby, </strong>Marketing Director, Origin </p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- testimonial -->
+       
 
 
         <section class="solution">
@@ -417,7 +410,6 @@
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
-        <script src="scripts/donuts.js"></script>
         <!-- endbuild -->
       </body>
       </html>
