--- a/app/services.html
+++ b/app/services.html
@@ -96,7 +96,7 @@
               <a href="#" class="btn btn-orange">Learn more</a>
             </div>
           </div>
-          <div class="col-12 col-lg-6 service-item" id="ppc">
+          <div class="col-12 col-lg-6 service-item offset-top" id="ppc">
             <a href="#"><figure class="right"><div class="bg-black"></div>
               <img src="images/services/ppc.jpg" alt="ppc">
               <figcaption>PPC</figcaption>
