--- a/app/advice-center.html
+++ b/app/advice-center.html
@@ -312,7 +312,29 @@
     <script src="/bower_components/bootstrap/js/dist/popover.js"></script>
     <!-- endbuild -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-<script src="scripts/filter.js"></script>
+    <script>
+      // init Isotope
+      var $grid = $('.services-to-filter').isotope({
+      // options
+      itemSelector: '.service-item',
+      layoutMode: 'fitRows'
+    });
+    // filter items on button click
+    $('.filter-services').on( 'click', 'a', function() {
+      $('.offset-top').removeClass('offset-top');
+      var filterValue = $(this).attr('data-filter');
+      $grid.isotope({ filter: filterValue });
+    });
+
+    // change is-checked class on buttons
+    $('.filter-services').each( function( i, buttonGroup ) {
+      var $buttonGroup = $( buttonGroup );
+      $buttonGroup.on( 'click', 'a', function() {
+        $buttonGroup.find('.is-checked').removeClass('is-checked');
+        $( this ).addClass('is-checked');
+      });
+    });
+  </script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
