--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             <div class="slide-content">
               <h2>Search Engine Optimisation</h2>
               <p><strong>Grow your brand oganically.</strong> Give your customers expert content and increase Google visibility.</p>
-              <a href="/seo.html" class="btn btn-learn-more">Learn more about SEO</a>
+              <a href="/services.html" class="btn btn-learn-more">Learn more about SEO</a>
               <a href="#" class="btn btn-next-service">Next Service ⟶</a>
             </div>
           </div>
@@ -102,8 +102,9 @@
             <h6 class="bold uppercase">Introducing ignition search </h6>
             <h2>Performance Agency</h2>
             <p>We help businesses grow their revenue, sales enquiries and customer base through high quality internet marketing services. </p>
-            <a href="/about.html" class="btn mr-2 btn-orange">Learn more about us</a><a href="/contact.html" class="btn btn-orange">Get in touch</a>
-            <a href="/portfolio.html" class="d-block mt-5 small-grey-text latest-work uppercase">View latest work</a>
+            <a href="/about-us.html" class="btn mr-2 btn-orange">Learn more about us</a>
+            <a href="#" class="btn btn-orange">Get in touch</a>
+            <a href="/work.html" class="d-block mt-5 small-grey-text latest-work uppercase">View latest work</a>
           </div>
           </div>
           
@@ -121,7 +122,7 @@
                 <div class="col-xs-12 col-sm-6">
                   <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
                 </div>
-              <div class="col-xs-12 col-sm-6">
+              <div class="col-xs-12 col-sm-6 case-content">
                 <h6 class="client small-grey-text">Origin global</h6>
                 <h3 class="case-title">Driving the business forward following a complex Google penalty </h3>
                 <p class="service"><strong>Project services: </strong>Search Engine Optimization</p>
@@ -135,7 +136,7 @@
                 <div class="col-xs-12 col-sm-6">
                   <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6 case-content">
                   <h6 class="client small-grey-text">PRETTY GREEN</h6>
                   <h3 class="case-title">£1 million return from £45k spend. </h3>
                   <p class="service"><strong>Project services: </strong>PPC, CRO</p>
