--- a/app/index.html
+++ b/app/index.html
@@ -14,12 +14,6 @@
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <script src="/bower_components/three.js/build/three.min.js"></script>
-  <script src="/bower_components/three.js/build/three.module.js"></script>
-  <script src="scripts/projector-renderer.js"></script>
-  <script src="scripts/canvas-renderer.js"></script>
-  <script src="scripts/stats.js"></script>
-  <script src="scripts/animation.js"></script>
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -27,6 +21,7 @@
 
 </head>
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
