--- a/app/index.html
+++ b/app/index.html
@@ -40,11 +40,9 @@
           </li>
         </ul>
         <a class="mobile bold d-none ml-auto" tel="#">0114 272 2444</a>
+        
         <div class="sidenav">
-          <button type="button" class="close menu-link" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <ul>
+          <ul class="nav-links">
             <li><a href="/">Home</a></li>
             <li><a href="/services.html">Our Services</a></li>
             <li><a href="/work.html">Our Work</a></li>
@@ -60,6 +58,9 @@
             <li><a href="#" class="fa fa-instagram"></a></li>
           </ul>
         </div>
+        <button type="button" class="close menu-link" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <a href="#" class="menu-link fa fa-bars"></a>
       </nav>
 
