add menu across website

--- a/app/agencies.html
+++ b/app/agencies.html
@@ -44,7 +44,28 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold d-none d-sm-block d-md-none d-xl-block" tel="#">0114 272 2444</a>
+        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+        
+        <div class="sidenav">
+          <ul class="nav-links">
+            <li><a href="/">Home</a></li>
+            <li><a href="/services.html">Our Services</a></li>
+            <li><a href="/work.html">Our Work</a></li>
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/agencies.html">Agencies</a></li>
+            <li><a href="/advice-center.html">Advice Center</a></li>
+            <li><a href="/contact.html">Contact Us</a></li>
+          </ul>
+          <ul class="social-media list-inline">
+            <li><a href="#" class="fa fa-facebook"></a></li>
+            <li><a href="#" class="fa fa-twitter"></a></li>
+            <li><a href="#" class="fa fa-linkedin"></a></li>
+            <li><a href="#" class="fa fa-instagram"></a></li>
+          </ul>
+        </div>
+        <button type="button" class="close menu-link" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <a href="#" class="menu-link fa fa-bars"></a>
       </nav>
 
