--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold d-none ml-auto" tel="#">0114 272 2444</a>
+        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
         
         <div class="sidenav">
           <ul class="nav-links">
