--- a/app/services.html
+++ b/app/services.html
@@ -31,23 +31,44 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <nav class="navbar fixed-top white-menu">
-      <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
-      <a class="navbar-brand red-logo" href="#"><img src="images/logos/red-transparent.png" alt=""></a>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pay Per Click</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Conversion Rate Optimisation</a>
-        </li>
-      </ul>
-      <a class="mobile bold d-none d-sm-block d-md-none d-lg-block" tel="#">0114 272 2444</a>
-      <a href="#" class="menu-link fa fa-bars"></a>
-    </nav>
+    nav class="navbar fixed-top white-menu">
+        <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
+        <a class="navbar-brand red-logo" href="#"><img src="images/logos/red-transparent.png" alt=""></a>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pay Per Click</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Conversion Rate Optimisation</a>
+          </li>
+        </ul>
+        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+        
+        <div class="sidenav">
+          <ul class="nav-links">
+            <li><a href="/">Home</a></li>
+            <li><a href="/services.html">Our Services</a></li>
+            <li><a href="/work.html">Our Work</a></li>
+            <li><a href="/about-us.html">About Us</a></li>
+            <li><a href="/agencies.html">Agencies</a></li>
+            <li><a href="/advice-center.html">Advice Center</a></li>
+            <li><a href="/contact.html">Contact Us</a></li>
+          </ul>
+          <ul class="social-media list-inline">
+            <li><a href="#" class="fa fa-facebook"></a></li>
+            <li><a href="#" class="fa fa-twitter"></a></li>
+            <li><a href="#" class="fa fa-linkedin"></a></li>
+            <li><a href="#" class="fa fa-instagram"></a></li>
+          </ul>
+        </div>
+        <button type="button" class="close menu-link" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <a href="#" class="menu-link fa fa-bars"></a>
+      </nav>
 
     <header>
       <div class="content">
