--- a/app/index.html
+++ b/app/index.html
@@ -66,16 +66,7 @@
 
       <header class="carousel">
         <div class="content-seo">
-        <!-- 
-          <svg width="1920" height="1080" viewBox="0 0 1920 1080">
-            <defs>
-              <mask id="hero-mask">
-                <image width="1920" height="1080" xlink:href="images/mask.png"/>
-              </mask>
-            </defs>
-            <image mask="url(#hero-mask)" width="1920" height="1080" xlink:href="images/hero1.jpg"/>
-          </svg> -->
-          <figure><img class="img-fluid" src="images/home/home_1.jpg" alt=""></figure>
+          <figure><img class="img-fluid" src="images/home/home_3.jpg" alt=""></figure>
           <div class="container">
             <div class="slide-content">
               <h2>Search Engine Optimisation</h2>
@@ -97,7 +88,7 @@
           </div>
         </div>
         <div class="content-cro">
-          <figure><img class="img-fluid" src="images/home/home_3.jpg" alt=""></figure>
+          <figure><img class="img-fluid" src="images/home/home_1.jpg" alt=""></figure>
           <div class="container">
             <div class="slide-content">
               <h2>Conversion Rate Optimisation</h2>
@@ -141,7 +132,7 @@
               <div class="col-xs-12 col-sm-6 case-content">
                 <h6 class="client small-grey-text">Origin global</h6>
                 <h3 class="case-title">Driving the business forward following a complex Google penalty </h3>
-                <p class="service"><strong>Project services: </strong>Search Engine Optimization</p>
+                <p class="service"><strong>Project services: </strong>Search Engine Optimisation</p>
                 <a href="/case.html" class="btn btn-orange clear">View case study</a>
               </div>
             </div>
@@ -186,9 +177,9 @@
               <h2>Get in touch</h2>
               <div class="col-xs-6">
                 <span class="small-grey-text">Office address</span>
-                <p class="one-line">Ignition Search,</p>
-                <p class="one-line">The Triangle 1, Burton</p>
-                <p class="one-line">Road, Sheffield, S3 8BW</p>
+                <p class="one-line">The Triangle,</p>
+                <p class="one-line">1 Burton Road,</p>
+                <p class="one-line">Sheffield, S3 8BW</p>
               </div>
               <div class="col-xs-6">
                 <span class="small-grey-text">Socials</span>
@@ -274,12 +265,12 @@
                 </div>
                 <div class="col-xs-12 col-sm-6">
                   <ul>
-                    <li><a href="#">Search Engine Optimization</a></li>
+                    <li><a href="#">Search Engine Optimisation</a></li>
                     <li><a href="#">Pay Per Click</a></li>
                     <li><a href="#">Conversion Rate Optimisation</a></li>
                   </ul> 
                 </div>
-                <figure class="google-partner"><img src="#" alt=""></figure>
+                <figure class="google-partner"><img src="images/certificates/certificate1.png" alt=""></figure>
               </div>
             </div>
           </div>
