--- a/app/about-us.html
+++ b/app/about-us.html
@@ -14,13 +14,6 @@
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <script src="/bower_components/three.js/build/three.min.js"></script>
-  <script src="/bower_components/three.js/build/three.module.js"></script>
-  <script src="scripts/projector-renderer.js"></script>
-  <script src="scripts/canvas-renderer.js"></script>
-  <script src="scripts/stats.js"></script>
-  <script src="scripts/animation.js"></script>
-
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
@@ -86,7 +79,7 @@
                 <div class="content">
                   <div class="breadcrumbs small-grey-text">Home <span class="arrow">></span> About us</div>
                   <h2 id="who">Who Are We?</h2>
-                  <p>We're an award winning, Google Premier Partner Agency, with a strong focus on client ROI and ethical best practice service delivery. From offices in Sheffield, Manchester and Dublin, we've grown significantly over the last decade providing a range of high quality internet marketing services. </p>
+                  <p>We are an award-winning, Google Premier Partner agency providing a range of high-quality internet marketing services with a strong focus on client ROI and ethical best practice service delivery.</p><p> Over the last decade we have grown significantly. Starting as a small set-up in Sheffield’s Kelham Island, our head office now spans two floors while 2016 saw the launch of new offices in Manchester and Dublin. </p>
                   <a href="services.html" class="btn btn-orange mr-3 mb-3">View our services</a><a href="#" class="btn btn-orange mr-3 mb-3">Get in touch</a>
                 </div>
               </div>
@@ -100,9 +93,8 @@
               <li><img src="images/certificates/certificate1.png" alt=" "></li>
               <li><img src="images/certificates/certificate2.png" alt=" "></li>
               <li><img src="images/certificates/certificate3.png" alt=" "></li>
-              <li><img src="images/certificates/certificate5.png" alt=" "></li>
+              <li><img src="images/certificates/winner.png" alt=" "></li>
               <li><img src="images/certificates/certificate4.png" alt=" "></li>
-              <li><img src="images/certificates/certificate7.png" alt=" "></li>
             </ul>
             <span class="small-grey-text certificates">Certificates</span>
           </div>
@@ -119,19 +111,19 @@
             <h2 id="why" class="mb-5">Why Us</h2>
           </div>
           <div class="col-12 col-md-4 text-left">
-            <img src="images/bulb-icon.png" alt="" class="icon">
-            <h3>Technical SEO</h3>
-            <p>From keyword research to the more complex site architecture best practices, we overcome and fix any technical issues you may have that are holding you back. </p>
+            <img src="images/icons/resourceful.png" alt="" class="icon">
+            <h3>Resourceful</h3>
+            <p>We take a collaborative, inter-departmental approach to search marketing — bridging the gap between strategy, research, design and delivery. </p>
           </div>
           <div class="col-12 col-md-4 text-left">
-            <img src="images/bulb-icon.png" alt="" class="icon">
-            <h3>Technical SEO</h3>
-            <p>From keyword research to the more complex site architecture best practices, we overcome and fix any technical issues you may have that are holding you back. </p>
+            <img src="images/icons/experienced.png" alt="" class="icon">
+            <h3>Experienced</h3>
+            <p>We have years of experience in helping businesses grow, working with our clients to define, deliver and review strategies to maximise ROI.</p>
           </div>
           <div class="col-12 col-md-4 text-left">
-            <img src="images/bulb-icon.png" alt="" class="icon">
-            <h3>Technical SEO</h3>
-            <p>From keyword research to the more complex site architecture best practices, we overcome and fix any technical issues you may have that are holding you back. </p>
+            <img src="images/icons/thought-leaders.png" alt="" class="icon">
+            <h3>Thought leaders</h3>
+            <p>We offer free seminars on the latest digital marketing trends, Google updates, beta features and more.</p>
           </div>
         </div>
 
@@ -384,21 +376,40 @@
             </div> <!-- testimonial carousel -->
           </div>
         </div>
-
-        <h6 class="small-grey-text text-center mt-3">Trusted by</h6>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row">
+          <h6 class="small-grey-text text-center mt-3">Trusted by</h6>
         <ul class="trusted-by-carousel">
-          <li><img src="images/trusted/trusted1.jpg" alt=""></li>
-          <li><img src="images/trusted/trusted2.png" alt=""></li>
-          <li><img src="images/trusted/trusted3.png" alt=""></li>
-          <li><img src="images/trusted/trusted4.png" alt=""></li>
-          <li><img src="images/trusted/trusted5.png" alt=""></li>
-          <li><img src="images/trusted/trusted6.jpg" alt=""></li>
-          <li><img src="images/trusted/trusted7.jpg" alt=""></li>
-          <li><img src="images/trusted/trusted8.jpg" alt=""></li>
+          <li><img src="images/trusted/1.png" alt=""></li>
+          <li><img src="images/trusted/2.png" alt=""></li>
+          <li><img src="images/trusted/3.png" alt=""></li>
+          <li><img src="images/trusted/4.png" alt=""></li>
+          <li><img src="images/trusted/5.png" alt=""></li>
+          <li><img src="images/trusted/6.png" alt=""></li>
+          <li><img src="images/trusted/7.png" alt=""></li>
+          <li><img src="images/trusted/8.png" alt=""></li>
+          <li><img src="images/trusted/9.png" alt=""></li>
+          <li><img src="images/trusted/10.png" alt=""></li>
+          <li><img src="images/trusted/11.png" alt=""></li>
+          <li><img src="images/trusted/12.png" alt=""></li>
+          <li><img src="images/trusted/13.png" alt=""></li>
+          <li><img src="images/trusted/14.png" alt=""></li>
+          <li><img src="images/trusted/15.png" alt=""></li>
+          <li><img src="images/trusted/16.png" alt=""></li>
+          <li><img src="images/trusted/17.png" alt=""></li>
+          <li><img src="images/trusted/18.png" alt=""></li>
+          <li><img src="images/trusted/19.png" alt=""></li>
+          <li><img src="images/trusted/20.png" alt=""></li>
+          <li><img src="images/trusted/21.png" alt=""></li>
+          <li><img src="images/trusted/22.png" alt=""></li>
+        </ul>
         </div>
       </div>
     </section>
-    <!-- case-studies -->
+
     <section class="contact pb-0">
       <h2 class="fade-out">Contact</h2>
       <div class="container">
