--- a/app/service.html
+++ b/app/service.html
@@ -14,13 +14,7 @@
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <script src="/bower_components/three.js/build/three.min.js"></script>
-  <script src="/bower_components/three.js/build/three.module.js"></script>
-  <script src="scripts/projector-renderer.js"></script>
-  <script src="scripts/canvas-renderer.js"></script>
-  <script src="scripts/stats.js"></script>
-  <script src="scripts/animation.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
@@ -71,19 +65,10 @@
 
       <header>
         <div class="content-seo centered">
-        <!-- 
-          <svg width="1920" height="1080" viewBox="0 0 1920 1080">
-            <defs>
-              <mask id="hero-mask">
-                <image width="1920" height="1080" xlink:href="images/mask.png"/>
-              </mask>
-            </defs>
-            <image mask="url(#hero-mask)" width="1920" height="1080" xlink:href="images/hero1.jpg"/>
-          </svg> -->
-          <figure><img class="cover img-fluid" src="images/home/home_1.jpg" alt=""></figure>
+          <figure><img class="cover img-fluid" src="images/home/home_3.jpg" alt=""></figure>
           <div class="container p-absolute">
             <div class="service-content text-center">
-              <h2>Search Engine Optimisation</h2>
+              <h1>Search Engine Optimisation</h1>
               
             </div>
           </div>
@@ -99,11 +84,11 @@
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-12 col-lg-6 centered column bordered">
-              <h3 class="mb-5">Increase your website visibility through high quality content production and originally researched link building ideas. </h3>
+              <h4 class="mb-5 text-left">Increase your website visibility through high quality content production and originally researched link building ideas. </h4>
                 <p class="grey dash-before">Give your customers expert content, grow your brand and Google visibility</p>
               </div>
-              <div class="col-12 col-lg-6 centered column">
-                <h3>What can we do for your business</h3>
+              <div class="col-12 col-lg-6 centered pr-0">
+                <h3 class="mr-3">What can we do for your business</h3>
                 <a href="/portfolio.html" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
             </div>
@@ -140,22 +125,22 @@
             </div>
             <div class="row">
               <div class="col-6 col-lg-3">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/technical-seo.png" alt="" class="icon">
                 <h4>Technical SEO</h4>
                 <p>From keyword research to the more complex site architecture best practices, we overcome and fix any technical issues you may have that are holding you back. </p>
               </div>
               <div class="col-6 col-lg-3">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/content-creation.png" alt="" class="icon">
                 <h4>Content Creation</h4>
                 <p>We have a content led approach to our SEO, meaning that we focus on creating great content and building lasting relationships with other relevant websites</p>
               </div>
               <div class="col-6 col-lg-3">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/authority-building.png" alt="" class="icon">
                 <h4>Authority Building</h4>
                 <p>Our outreach team earns relevant links from authoritative domains to ensure your website is the expert in Google's eyes</p>
               </div>
               <div class="col-6 col-lg-3">
-                <img src="images/bulb-icon.png" alt="" class="icon">
+                <img src="images/icons/user-focus.png" alt="" class="icon">
                 <h4>User Focus</h4>
                 <p>We focus on understanding what factors influence your customers to purchase or request a service and ensure your pages are optimised to make them convert.</p>
               </div>
@@ -174,30 +159,30 @@
                   <p>This mix delivers an unbeatable approach to attracting the highest value traffic available. Through authoritative and optimised relevant content, a steady build-up of natural links and a highly optimised online presence meant to meet Google's guidelines, our services ensure our clients derive superior value and results from the work we do:</p>
                 </div>
               </div>
-              <div class="row">
+              <div class="row mt-5">
 
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/improved-user.png" alt="" class="icon">
                   <h5>Improved User Experience</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/engaging.png" alt="" class="icon">
                   <h5>Engaging Relevant Content </h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/high-quality.png" alt="" class="icon">
                   <h5>High quality link building</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/technical-excellence.png" alt="" class="icon">
                   <h5>Technical excellence</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/brand-building.png" alt="" class="icon">
                   <h5>Brand building</h5>
                 </div>
                 <div class="col-6 col-lg-4">
-                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <img src="images/icons/increased-roi.png" alt="" class="icon">
                   <h5>Increased ROI</h5>
                 </div>
                 </div>
@@ -216,6 +201,7 @@
         <section class="case-examples">
             <div class="row no-gutters">
               <div class="col-12 col-md-6">
+                  <div class="bg-grey"></div>
                 <a href="">
                 <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
@@ -225,6 +211,7 @@
                 </a>
               </div>
               <div class="col-12 col-md-6">
+                <div class="bg-grey"></div>
                 <a href="">
                 <img src="images/service/russums.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
