--- a/app/contact.html
+++ b/app/contact.html
@@ -14,12 +14,7 @@
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <script src="/bower_components/three.js/build/three.min.js"></script>
-  <script src="/bower_components/three.js/build/three.module.js"></script>
-  <script src="scripts/projector-renderer.js"></script>
-  <script src="scripts/canvas-renderer.js"></script>
-  <script src="scripts/stats.js"></script>
-  <script src="scripts/animation.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -99,6 +94,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 col-md-5 contact-info">
+                <img src="images/logos/small-logo.png" alt="" class="small-logo">
                 <h2>Get in touch</h2>
                 <div class="col-xs-6">
                   <span class="small-grey-text">Office address</span>
@@ -117,8 +113,8 @@
                 </div>
                 <div class="col-xs-6">
                   <span class="small-grey-text">Contact details</span>
-                  <p class="one-line red-line">0114 272 2444</p>
-                  <p class="one-line red-line">info@ignitionsearch.co.uk</p>
+                  <p class="one-line dash-before">0114 272 2444</p>
+                  <p class="one-line dash-before">info@ignitionsearch.co.uk</p>
                 </div>
               </div>
               <div class="col-12 col-md-7">
@@ -147,9 +143,9 @@
                     <div class="form-row">
                       <div class="form-group col-12">
                         <label class="col-form-label" for="services">Services Required</label>
-                        <select class="form-control" id="services" placeholder="Please select a service">
+                        <select name="services[]" class="form-control multi-select" id="services" placeholder="Please select a service" multiple="multiple">
                           <optgroup>
-                            <option value="" selected disabled>Please select a service</option>
+                            <option value="">(Optional)</option>
                             <option value="seo">Search Engine Optimisation</option>
                             <option value="ppc">Pay Per Click</option>
                             <option value="cro">Conversion Rate Optimisation</option>
@@ -164,7 +160,7 @@
                         <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
                       </div>
                     </div>
-                    <button class="btn btn-submit btn-white pull-right" type="submit">Submit Message</button>
+                    <button class="btn btn-submit btn-orange pull-right" type="submit">Submit Message</button>
                   </form>
                 </div>
               </div>
@@ -211,8 +207,9 @@
                       <li><a href="#">Conversion Rate Optimisation</a></li>
                     </ul> 
                   </div>
-                  <figure class="google-partner"><img src="#" alt=""></figure>
+                  <figure class="google-partner"><img src="images/certificates/certificate1.png" alt=""></figure>
                 </div>
+                <img src="images/logos/small-logo-black.png" alt="" class="small-logo-black">
               </div>
             </div>
             <figure class="logo"><img src="" alt=""></figure>
@@ -254,5 +251,14 @@
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+        <script>
+        $(document).ready(function() {
+              $('.multi-select').select2({
+                placeholder: "(Optional)",
+                allowClear: true
+              });
+          });  
+        </script>
       </body>
       </html>
