--- a/app/services.html
+++ b/app/services.html
@@ -31,7 +31,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    nav class="navbar fixed-top white-menu">
+    <nav class="navbar fixed-top white-menu">
         <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
         <a class="navbar-brand red-logo" href="#"><img src="images/logos/red-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
@@ -71,6 +71,7 @@
       </nav>
 
     <header>
+      <div id="animation"></div>
       <div class="content">
         <div class="container">
           <div class="row">
