--- a/app/case.html
+++ b/app/case.html
@@ -14,12 +14,8 @@
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <script src="/bower_components/three.js/build/three.min.js"></script>
-  <script src="/bower_components/three.js/build/three.module.js"></script>
-  <script src="scripts/projector-renderer.js"></script>
-  <script src="scripts/canvas-renderer.js"></script>
-  <script src="scripts/stats.js"></script>
-  <script src="scripts/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -44,7 +40,7 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
         
         <div class="sidenav">
           <ul class="nav-links">
@@ -183,14 +179,6 @@
               <div class="col-11 col-sm-10 col-md-8">
                 <p>After 3 months, we had managed to remove most of the onsite issues whilst our content strategists managed to produce some great content pieces and built some really useful relationships with publishers in the home and garden industry.
                 </p>
-              <div class="row center-images">
-                <div class="col-6 col-md-4"><img src="images/case-studies/case-study_1.png" alt="" class="img-fluid"></img></div>
-              <div class="col-6 col-md-4"><img src="images/case-studies/case-study_2.png" alt="" class="img-fluid"></img></div>
-              <div class="col-6 col-md-4"><img src="images/case-studies/case-study_3.png" alt="" class="img-fluid"></img></div>
-              <div class="col-6 col-md-4"><img src="images/case-studies/case-study_4.png" alt="" class="img-fluid"></img></div>
-              <div class="col-6 col-md-4"><img src="images/case-studies/case-study_5.png" alt="" class="img-fluid"></img></div>
-              <div class="col-6 col-md-4"><img src="images/case-studies/case-study_6.png" alt="" class="img-fluid"></img></div>
-            </div>
               </div>
             </div>
           </div>
@@ -265,6 +253,7 @@
             <div class="row no-gutters">
               <div class="col-12 col-md-6">
                 <a href="">
+                  <div class="bg-grey"></div>
                 <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
                   <span class="title small-grey-text">Origin Global</span>
@@ -274,6 +263,7 @@
               </div>
               <div class="col-12 col-md-6">
                 <a href="">
+                  <div class="bg-grey"></div>
                 <img src="images/service/russums.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
                   <span class="title small-grey-text">Russums </span>
