--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#">Conversion Rate Optimisation</a>
         </li>
       </ul>
-      <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+      <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
 
       <div class="sidenav">
         <ul class="nav-links">
@@ -71,7 +71,7 @@
           <div class="slide-content">
             <h2>Search Engine Optimisation</h2>
             <p><strong>Grow your brand oganically.</strong> Give your customers expert content and increase Google visibility.</p>
-            <a href="/service.html" class="btn btn-learn-more">Learn more about SEO</a>
+            <a href="/seo.html" class="btn btn-learn-more">Learn more about SEO</a>
             <a href="#" class="btn btn-next-service">Next Service ⟶</a>
           </div>
         </div>
@@ -82,7 +82,7 @@
           <div class="slide-content">
             <h2>Pay Per Click</h2>
             <p><strong>Delivering customers instantly.</strong>  Bring targeted visitors each day, every day. </p>
-            <a href="/service.html" class="btn btn-learn-more">Learn more about PPC</a>
+            <a href="/ppc.html" class="btn btn-learn-more">Learn more about PPC</a>
             <a href="#" class="btn btn-next-service">Next Service ⟶</a>
           </div>
         </div>
@@ -93,7 +93,7 @@
           <div class="slide-content">
             <h2>Conversion Rate Optimisation</h2>
             <p><strong>A better, not bigger, spend.</strong> Drive healthier results and increase your bottom line.</p>
-            <a href="/service.html" class="btn btn-learn-more">Learn more about CRO</a>
+            <a href="/cro.html" class="btn btn-learn-more">Learn more about CRO</a>
             <a href="#" class="btn btn-next-service">Next Service ⟶</a>
           </div>
         </div>
@@ -128,7 +128,7 @@
               <div class="case">
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+                    <figure><img class="img-fluid" src="images/case-studies/shape/pretty-green.png" alt=""></figure>
                   </div>
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">PRETTY GREEN</h6>
@@ -141,7 +141,7 @@
               <div class="case">
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+                    <figure><img class="img-fluid" src="images/case-studies/shape/origin-global.png" alt=""></figure>
                   </div>
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">Origin global</h6>
@@ -155,7 +155,7 @@
               <div class="case">
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+                    <figure><img class="img-fluid" src="images/case-studies/shape/captain.png" alt=""></figure>
                   </div>
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">CAPTAIN COVER</h6>
@@ -169,7 +169,7 @@
               <div class="case">
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+                    <figure><img class="img-fluid" src="images/case-studies/shape/jackson.png" alt=""></figure>
                   </div>
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">JACKSON WOODTURNERS</h6>
@@ -183,7 +183,7 @@
               <div class="case">
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+                    <figure><img class="img-fluid" src="images/case-studies/shape/datatrack.png" alt=""></figure>
                   </div>
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">DATATRACK LABS</h6>
@@ -196,7 +196,7 @@
               <div class="case">
                 <div class="row">
                   <div class="col-xs-12 col-sm-6">
-                    <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+                    <figure><img class="img-fluid" src="images/case-studies/shape/russums.png" alt=""></figure>
                   </div>
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">RUSSUMS</h6>
@@ -306,8 +306,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <h2 class="m-b-40">Be seen Be Found.</h2>
-          <span class="dash-grey"></span>
-          <ul class="social-media list-inline black">
+          <ul class="dash-before grey social-media list-inline black">
             <li><a href="#" class="fa fa-facebook"></a></li>
             <li><a href="#" class="fa fa-twitter"></a></li>
             <li><a href="#" class="fa fa-linkedin"></a></li>
