--- a/app/service.html
+++ b/app/service.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
         
         <div class="sidenav">
           <ul class="nav-links">
