--- a/app/services.html
+++ b/app/services.html
@@ -14,12 +14,8 @@
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <script src="/bower_components/three.js/build/three.min.js"></script>
-  <script src="/bower_components/three.js/build/three.module.js"></script>
-  <script src="scripts/projector-renderer.js"></script>
-  <script src="scripts/canvas-renderer.js"></script>
-  <script src="scripts/stats.js"></script>
-  <script src="scripts/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -45,7 +41,7 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
         
         <div class="sidenav">
           <ul class="nav-links">
@@ -106,7 +102,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-6 service-item" id="seo">
-            <a href="#">
+            <a href="/seo.html">
               <figure class="left"><div class="bg-black"></div>
                 <img src="images/services/seo.jpg" alt="">
                 <figcaption>SEO</figcaption>
@@ -115,22 +111,22 @@
             <div class="service-text">
               <span class="small-grey-text">Search engine optimisation</span>
               <h3>Grow your brand organically around people, not products</h3>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/seo.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
           <div class="col-12 col-lg-6 service-item offset-top" id="ppc">
-            <a href="#"><figure class="right"><div class="bg-black"></div>
+            <a href="/ppc.html"><figure class="right"><div class="bg-black"></div>
               <img src="images/services/ppc.jpg" alt="ppc">
               <figcaption>PPC</figcaption>
             </figure></a>
             <div class="service-text">
               <span class="small-grey-text">Pay per click</span>
               <h3>Bring targeted visitors each day, every day</h3>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/ppc.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
           <div class="col-12 col-lg-6 service-item" id="cro">
-            <a href="#"><figure class="left">
+            <a href="/cro.html"><figure class="left">
               <div class="bg-black"></div>
               <img src="images/services/cro.jpg" alt="">
               <figcaption>CRO</figcaption>
@@ -138,7 +134,7 @@
             <div class="service-text">
               <span class="small-grey-text">Conversion rate optimisation</span>
               <h3>Persuade customers to say yes before they say no</h3>
-              <a href="#" class="btn btn-orange">Learn more</a>
+              <a href="/cro.html" class="btn btn-orange">Learn more</a>
             </div>
           </div>
         </div>
